# madeena-node-imager-pipeline

./: .gitignore  DOUBLE_CLICK_FEATURE.md  ENHANCEMENTS_IMPLEMENTED.md  GEMINI.md  MULTI_INPUT_IMPLEMENTATION.md  MULTI_INPUT_NODES.md  Makefile  README.md  run-app.bat  run-backend.sh
backend/: .coverage  .env.example  app.py  app.py.bak  config.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  custom_node_service.py  in_memory_storage.py  node_registry.py  pipeline_executor.py
backend/app/custom_node_templates/: template_node.py
backend/app/processors/: __init__.py  base_processor.py  basic_processors.py  pipeline_processors.py
backend/tests/: conftest.py  test_api.py  test_node_registry.py  test_pipeline_executor.py  test_processors.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: CustomEdge.js  CustomNode.js  CustomNodeUploadModal.js  ErrorBoundary.js  ErrorBoundary.test.js  ImagePreviewPanel.js  KeyboardShortcutsPanel.js  NodeGroupPanel.js  NodePalette.js  NodePalette.test.js  NodePropertiesModal.js  NodePropertiesModal.test.js  OutputPreviewPanel.js  SaveLoadModal.js  StatusPanel.js
imager-pipeline/: .env.example  .gitignore  __init__.py  build_image_pairs.py  calibration_examples.py  camera_calibration.py  complete_pipeline.py  complete_pipeline_coba1.py  imagej_replicator.py  process_without_ffc.py  pyproject.toml  test_complete_pipeline.py  tiff_json_to_dcm.py  try.ipynb  wavelet_denoising.py
imager-pipeline/archive/: __init__.py
(+9 files in other folders)
